--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <header>
+        <h1>TIC-TAC-TOE</h1>
+        <h2>Showdown</h2>
+    </header>
+    <div class="container">
+        <div class="side-bar">
+            <button class="reset-board" type="button">Reset Game</button>
+        </div>
+        <div class="game-board">
+            <div data-key="1" class="block"></div>
+            <div data-key="2" class="block"></div>
+            <div data-key="3" class="block"></div>
+            <div data-key="4" class="block"></div>
+            <div data-key="5" class="block"></div>
+            <div data-key="6" class="block"></div>
+            <div data-key="7" class="block"></div>
+            <div data-key="8" class="block"></div>
+            <div data-key="9" class="block"></div>
+        </div>
+    </div>
 </body>
 </html>
