Add a message board to show players turn and which player has won
there is a now a message board that shows the players and which player
turn it is and will also show who won and or if its a draw

uiControls now can update the winner of the game with winningPlayer
function and with setText function it can change the message on the
player board

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <h1>TIC-TAC-TOE</h1>
         <h2>Showdown</h2>
     </header>
+    <div class="player-board">
+        <div class="player1">Player1: X</div>
+        <div class="player-message">Player X Turn</div>
+        <div class="player2">Player2: O</div>
+    </div>
     <div class="container">
         <div class="side-bar">
             <button class="reset-board" type="button">Reset Game</button>
