--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <script src="index.js" defer></script>
-    <title>Tic-Tac-Toe</title>
+    <title>Tic-Tac-Toe Showdown</title>
 </head>
 <body>
     <header>
