Small fix to the UI
width size and margins, borders where changed for the tic tac toe
board to look more like paper and some padding was add as well

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <button class="reset-board" type="button">Reset Game</button>
         </div>
         <div class="game-board">
-            <div data-key="0" class="block"></div>
-            <div data-key="1" class="block"></div>
-            <div data-key="2" class="block"></div>
-            <div data-key="3" class="block"></div>
-            <div data-key="4" class="block"></div>
-            <div data-key="5" class="block"></div>
-            <div data-key="6" class="block"></div>
-            <div data-key="7" class="block"></div>
-            <div data-key="8" class="block"></div>
+            <div data-key="0" class="block tl"></div>
+            <div data-key="1" class="block tm"></div>
+            <div data-key="2" class="block tr"></div>
+            <div data-key="3" class="block ml"></div>
+            <div data-key="4" class="block m"></div>
+            <div data-key="5" class="block mr"></div>
+            <div data-key="6" class="block bl"></div>
+            <div data-key="7" class="block bm"></div>
+            <div data-key="8" class="block br"></div>
         </div>
     </div>
 </body>
